syntax_analyser.output
Terminals unused in grammar

   GT
   LT
   GE
   LE
   EQ
   NE
   AND
   OR


State 63 conflicts: 1 reduce/reduce
State 129 conflicts: 1 shift/reduce
State 138 conflicts: 13 shift/reduce
State 139 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: CLASS PROGRAM '{' field_dec1 method_dec1 '}'

    2 field_dec1: field_dec1 field_dec
    3           | /* empty */

    4 method_dec1: method_dec1 method_dec
    5            | /* empty */

    6 field_dec: type field_dec3 ';'

    7 field_dec3: field_dec3 field_dec2
    8           | field_dec2

    9 field_dec2: '{' id '}'
   10           | '{' id '[' ']' '}'

   11 method_dec: '{' method_dec2 '}' id '(' '[' method_dec4 ',' ']' ')' block

   12 method_dec2: type
   13            | VOID

   14 method_dec4: method_dec4 method_dec3
   15            | method_dec3

   16 method_dec3: '{' type id '}'

   17 block: '{' var_decl_x stetement_x '}'

   18 var_decl_x: var_decl_x var_decl
   19           | /* empty */

   20 var_decl: type id_p ','

   21 type: INT
   22     | BOOLEAN

   23 stetement_x: stetement_x statement
   24            | /* empty */

   25 statement: location assign_op expr ';'
   26          | method_call ';'
   27          | IF '(' expr ')' block else_block
   28          | FOR id '=' expr ',' expr block
   29          | RETURN '[' expr ']'
   30          | BREAK ';'
   31          | CONTINUE ';'
   32          | block

   33 else_block: ELSE block
   34           | /* empty */

   35 assign_op: '='
   36          | "+="
   37          | "-="

   38 method_call: method_name '(' expr_x ')'
   39            | CALLOUT '(' string_literal '[' ',' callout_arg_p ',' ']' ')'

   40 method_name: id

   41 location: id
   42         | id '[' expr ']'

   43 expr_x: expr_x expr
   44       | /* empty */

   45 expr: location
   46     | method_call
   47     | literal
   48     | expr bin_op expr
   49     | '-' '(' expr ')'
   50     | '!' '(' expr ')'
   51     | '(' expr ')'

   52 callout_arg_p: callout_arg_p callout_arg
   53              | callout_arg

   54 callout_arg: expr
   55            | string_literal

   56 bin_op: arith_op
   57       | rel_op
   58       | eq_op
   59       | cond_op

   60 arith_op: '+'
   61         | '-'
   62         | '*'
   63         | '/'
   64         | '%'

   65 rel_op: '<'
   66       | '>'
   67       | "<="
   68       | ">="

   69 eq_op: "=="
   70      | "!="

   71 cond_op: "&&"
   72        | "||"

   73 literal: int_literal
   74        | char_literal
   75        | bool_literal

   76 id_p: id_p id
   77     | id

   78 id: IDENTIFIER

   79 int_literal: decimal_literal
   80            | hex_literal

   81 decimal_literal: INT_LIT

   82 hex_literal: HEX_LIT

   83 bool_literal: TRUE
   84             | FALSE

   85 char_literal: CHAR_LIT

   86 string_literal: STR_LIT


Terminals, with rules where they appear

$end (0) 0
'!' (33) 50
'%' (37) 64
'(' (40) 11 27 38 39 49 50 51
')' (41) 11 27 38 39 49 50 51
'*' (42) 62
'+' (43) 60
',' (44) 11 20 28 39
'-' (45) 49 61
'/' (47) 63
';' (59) 6 25 26 30 31
'<' (60) 65
'=' (61) 28 35
'>' (62) 66
'[' (91) 10 11 29 39 42
']' (93) 10 11 29 39 42
'{' (123) 1 9 10 11 16 17
'}' (125) 1 9 10 11 16 17
error (256)
PROGRAM (258) 1
BOOLEAN (259) 22
BREAK (260) 30
CALLOUT (261) 39
CLASS (262) 1
CONTINUE (263) 31
ELSE (264) 33
FOR (265) 28
IF (266) 27
INT (267) 21
RETURN (268) 29
TRUE (269) 83
FALSE (270) 84
VOID (271) 13
GT (272)
LT (273)
GE (274)
LE (275)
EQ (276)
NE (277)
AND (278)
OR (279)
IDENTIFIER (280) 78
HEX_LIT (281) 82
INT_LIT (282) 81
CHAR_LIT (283) 85
STR_LIT (284) 86
"<=" (285) 67
">=" (286) 68
"==" (287) 69
"!=" (288) 70
"&&" (289) 71
"||" (290) 72
"+=" (291) 36
"-=" (292) 37


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
program (56)
    on left: 1, on right: 0
field_dec1 (57)
    on left: 2 3, on right: 1 2
method_dec1 (58)
    on left: 4 5, on right: 1 4
field_dec (59)
    on left: 6, on right: 2
field_dec3 (60)
    on left: 7 8, on right: 6 7
field_dec2 (61)
    on left: 9 10, on right: 7 8
method_dec (62)
    on left: 11, on right: 4
method_dec2 (63)
    on left: 12 13, on right: 11
method_dec4 (64)
    on left: 14 15, on right: 11 14
method_dec3 (65)
    on left: 16, on right: 14 15
block (66)
    on left: 17, on right: 11 27 28 32 33
var_decl_x (67)
    on left: 18 19, on right: 17 18
var_decl (68)
    on left: 20, on right: 18
type (69)
    on left: 21 22, on right: 6 12 16 20
stetement_x (70)
    on left: 23 24, on right: 17 23
statement (71)
    on left: 25 26 27 28 29 30 31 32, on right: 23
else_block (72)
    on left: 33 34, on right: 27
assign_op (73)
    on left: 35 36 37, on right: 25
method_call (74)
    on left: 38 39, on right: 26 46
method_name (75)
    on left: 40, on right: 38
location (76)
    on left: 41 42, on right: 25 45
expr_x (77)
    on left: 43 44, on right: 38 43
expr (78)
    on left: 45 46 47 48 49 50 51, on right: 25 27 28 29 42 43 48 49
    50 51 54
callout_arg_p (79)
    on left: 52 53, on right: 39 52
callout_arg (80)
    on left: 54 55, on right: 52 53
bin_op (81)
    on left: 56 57 58 59, on right: 48
arith_op (82)
    on left: 60 61 62 63 64, on right: 56
rel_op (83)
    on left: 65 66 67 68, on right: 57
eq_op (84)
    on left: 69 70, on right: 58
cond_op (85)
    on left: 71 72, on right: 59
literal (86)
    on left: 73 74 75, on right: 47
id_p (87)
    on left: 76 77, on right: 20 76
id (88)
    on left: 78, on right: 9 10 11 16 28 40 41 42 76 77
int_literal (89)
    on left: 79 80, on right: 73
decimal_literal (90)
    on left: 81, on right: 79
hex_literal (91)
    on left: 82, on right: 80
bool_literal (92)
    on left: 83 84, on right: 75
char_literal (93)
    on left: 85, on right: 74
string_literal (94)
    on left: 86, on right: 39 55


state 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program  go to state 2


state 1

    1 program: CLASS . PROGRAM '{' field_dec1 method_dec1 '}'

    PROGRAM  shift, and go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    1 program: CLASS PROGRAM . '{' field_dec1 method_dec1 '}'

    '{'  shift, and go to state 5


state 4

    0 $accept: program $end .

    $default  accept


state 5

    1 program: CLASS PROGRAM '{' . field_dec1 method_dec1 '}'

    $default  reduce using rule 3 (field_dec1)

    field_dec1  go to state 6


state 6

    1 program: CLASS PROGRAM '{' field_dec1 . method_dec1 '}'
    2 field_dec1: field_dec1 . field_dec

    BOOLEAN  shift, and go to state 7
    INT      shift, and go to state 8

    $default  reduce using rule 5 (method_dec1)

    method_dec1  go to state 9
    field_dec    go to state 10
    type         go to state 11


state 7

   22 type: BOOLEAN .

    $default  reduce using rule 22 (type)


state 8

   21 type: INT .

    $default  reduce using rule 21 (type)


state 9

    1 program: CLASS PROGRAM '{' field_dec1 method_dec1 . '}'
    4 method_dec1: method_dec1 . method_dec

    '{'  shift, and go to state 12
    '}'  shift, and go to state 13

    method_dec  go to state 14


state 10

    2 field_dec1: field_dec1 field_dec .

    $default  reduce using rule 2 (field_dec1)


state 11

    6 field_dec: type . field_dec3 ';'

    '{'  shift, and go to state 15

    field_dec3  go to state 16
    field_dec2  go to state 17


state 12

   11 method_dec: '{' . method_dec2 '}' id '(' '[' method_dec4 ',' ']' ')' block

    BOOLEAN  shift, and go to state 7
    INT      shift, and go to state 8
    VOID     shift, and go to state 18

    method_dec2  go to state 19
    type         go to state 20


state 13

    1 program: CLASS PROGRAM '{' field_dec1 method_dec1 '}' .

    $default  reduce using rule 1 (program)


state 14

    4 method_dec1: method_dec1 method_dec .

    $default  reduce using rule 4 (method_dec1)


state 15

    9 field_dec2: '{' . id '}'
   10           | '{' . id '[' ']' '}'

    IDENTIFIER  shift, and go to state 21

    id  go to state 22


state 16

    6 field_dec: type field_dec3 . ';'
    7 field_dec3: field_dec3 . field_dec2

    '{'  shift, and go to state 15
    ';'  shift, and go to state 23

    field_dec2  go to state 24


state 17

    8 field_dec3: field_dec2 .

    $default  reduce using rule 8 (field_dec3)


state 18

   13 method_dec2: VOID .

    $default  reduce using rule 13 (method_dec2)


state 19

   11 method_dec: '{' method_dec2 . '}' id '(' '[' method_dec4 ',' ']' ')' block

    '}'  shift, and go to state 25


state 20

   12 method_dec2: type .

    $default  reduce using rule 12 (method_dec2)


state 21

   78 id: IDENTIFIER .

    $default  reduce using rule 78 (id)


state 22

    9 field_dec2: '{' id . '}'
   10           | '{' id . '[' ']' '}'

    '['  shift, and go to state 26
    '}'  shift, and go to state 27


state 23

    6 field_dec: type field_dec3 ';' .

    $default  reduce using rule 6 (field_dec)


state 24

    7 field_dec3: field_dec3 field_dec2 .

    $default  reduce using rule 7 (field_dec3)


state 25

   11 method_dec: '{' method_dec2 '}' . id '(' '[' method_dec4 ',' ']' ')' block

    IDENTIFIER  shift, and go to state 21

    id  go to state 28


state 26

   10 field_dec2: '{' id '[' . ']' '}'

    ']'  shift, and go to state 29


state 27

    9 field_dec2: '{' id '}' .

    $default  reduce using rule 9 (field_dec2)


state 28

   11 method_dec: '{' method_dec2 '}' id . '(' '[' method_dec4 ',' ']' ')' block

    '('  shift, and go to state 30


state 29

   10 field_dec2: '{' id '[' ']' . '}'

    '}'  shift, and go to state 31


state 30

   11 method_dec: '{' method_dec2 '}' id '(' . '[' method_dec4 ',' ']' ')' block

    '['  shift, and go to state 32


state 31

   10 field_dec2: '{' id '[' ']' '}' .

    $default  reduce using rule 10 (field_dec2)


state 32

   11 method_dec: '{' method_dec2 '}' id '(' '[' . method_dec4 ',' ']' ')' block

    '{'  shift, and go to state 33

    method_dec4  go to state 34
    method_dec3  go to state 35


state 33

   16 method_dec3: '{' . type id '}'

    BOOLEAN  shift, and go to state 7
    INT      shift, and go to state 8

    type  go to state 36


state 34

   11 method_dec: '{' method_dec2 '}' id '(' '[' method_dec4 . ',' ']' ')' block
   14 method_dec4: method_dec4 . method_dec3

    '{'  shift, and go to state 33
    ','  shift, and go to state 37

    method_dec3  go to state 38


state 35

   15 method_dec4: method_dec3 .

    $default  reduce using rule 15 (method_dec4)


state 36

   16 method_dec3: '{' type . id '}'

    IDENTIFIER  shift, and go to state 21

    id  go to state 39


state 37

   11 method_dec: '{' method_dec2 '}' id '(' '[' method_dec4 ',' . ']' ')' block

    ']'  shift, and go to state 40


state 38

   14 method_dec4: method_dec4 method_dec3 .

    $default  reduce using rule 14 (method_dec4)


state 39

   16 method_dec3: '{' type id . '}'

    '}'  shift, and go to state 41


state 40

   11 method_dec: '{' method_dec2 '}' id '(' '[' method_dec4 ',' ']' . ')' block

    ')'  shift, and go to state 42


state 41

   16 method_dec3: '{' type id '}' .

    $default  reduce using rule 16 (method_dec3)


state 42

   11 method_dec: '{' method_dec2 '}' id '(' '[' method_dec4 ',' ']' ')' . block

    '{'  shift, and go to state 43

    block  go to state 44


state 43

   17 block: '{' . var_decl_x stetement_x '}'

    $default  reduce using rule 19 (var_decl_x)

    var_decl_x  go to state 45


state 44

   11 method_dec: '{' method_dec2 '}' id '(' '[' method_dec4 ',' ']' ')' block .

    $default  reduce using rule 11 (method_dec)


state 45

   17 block: '{' var_decl_x . stetement_x '}'
   18 var_decl_x: var_decl_x . var_decl

    BOOLEAN  shift, and go to state 7
    INT      shift, and go to state 8

    $default  reduce using rule 24 (stetement_x)

    var_decl     go to state 46
    type         go to state 47
    stetement_x  go to state 48


state 46

   18 var_decl_x: var_decl_x var_decl .

    $default  reduce using rule 18 (var_decl_x)


state 47

   20 var_decl: type . id_p ','

    IDENTIFIER  shift, and go to state 21

    id_p  go to state 49
    id    go to state 50


state 48

   17 block: '{' var_decl_x stetement_x . '}'
   23 stetement_x: stetement_x . statement

    BREAK       shift, and go to state 51
    CALLOUT     shift, and go to state 52
    CONTINUE    shift, and go to state 53
    FOR         shift, and go to state 54
    IF          shift, and go to state 55
    RETURN      shift, and go to state 56
    IDENTIFIER  shift, and go to state 21
    '{'         shift, and go to state 43
    '}'         shift, and go to state 57

    block        go to state 58
    statement    go to state 59
    method_call  go to state 60
    method_name  go to state 61
    location     go to state 62
    id           go to state 63


state 49

   20 var_decl: type id_p . ','
   76 id_p: id_p . id

    IDENTIFIER  shift, and go to state 21
    ','         shift, and go to state 64

    id  go to state 65


state 50

   77 id_p: id .

    $default  reduce using rule 77 (id_p)


state 51

   30 statement: BREAK . ';'

    ';'  shift, and go to state 66


state 52

   39 method_call: CALLOUT . '(' string_literal '[' ',' callout_arg_p ',' ']' ')'

    '('  shift, and go to state 67


state 53

   31 statement: CONTINUE . ';'

    ';'  shift, and go to state 68


state 54

   28 statement: FOR . id '=' expr ',' expr block

    IDENTIFIER  shift, and go to state 21

    id  go to state 69


state 55

   27 statement: IF . '(' expr ')' block else_block

    '('  shift, and go to state 70


state 56

   29 statement: RETURN . '[' expr ']'

    '['  shift, and go to state 71


state 57

   17 block: '{' var_decl_x stetement_x '}' .

    $default  reduce using rule 17 (block)


state 58

   32 statement: block .

    $default  reduce using rule 32 (statement)


state 59

   23 stetement_x: stetement_x statement .

    $default  reduce using rule 23 (stetement_x)


state 60

   26 statement: method_call . ';'

    ';'  shift, and go to state 72


state 61

   38 method_call: method_name . '(' expr_x ')'

    '('  shift, and go to state 73


state 62

   25 statement: location . assign_op expr ';'

    '='   shift, and go to state 74
    "+="  shift, and go to state 75
    "-="  shift, and go to state 76

    assign_op  go to state 77


state 63

   40 method_name: id .
   41 location: id .
   42         | id . '[' expr ']'

    '['  shift, and go to state 78

    '('       reduce using rule 40 (method_name)
    '('       [reduce using rule 41 (location)]
    $default  reduce using rule 41 (location)


state 64

   20 var_decl: type id_p ',' .

    $default  reduce using rule 20 (var_decl)


state 65

   76 id_p: id_p id .

    $default  reduce using rule 76 (id_p)


state 66

   30 statement: BREAK ';' .

    $default  reduce using rule 30 (statement)


state 67

   39 method_call: CALLOUT '(' . string_literal '[' ',' callout_arg_p ',' ']' ')'

    STR_LIT  shift, and go to state 79

    string_literal  go to state 80


state 68

   31 statement: CONTINUE ';' .

    $default  reduce using rule 31 (statement)


state 69

   28 statement: FOR id . '=' expr ',' expr block

    '='  shift, and go to state 81


state 70

   27 statement: IF '(' . expr ')' block else_block

    CALLOUT     shift, and go to state 52
    TRUE        shift, and go to state 82
    FALSE       shift, and go to state 83
    IDENTIFIER  shift, and go to state 21
    HEX_LIT     shift, and go to state 84
    INT_LIT     shift, and go to state 85
    CHAR_LIT    shift, and go to state 86
    '-'         shift, and go to state 87
    '('         shift, and go to state 88
    '!'         shift, and go to state 89

    method_call      go to state 90
    method_name      go to state 61
    location         go to state 91
    expr             go to state 92
    literal          go to state 93
    id               go to state 63
    int_literal      go to state 94
    decimal_literal  go to state 95
    hex_literal      go to state 96
    bool_literal     go to state 97
    char_literal     go to state 98


state 71

   29 statement: RETURN '[' . expr ']'

    CALLOUT     shift, and go to state 52
    TRUE        shift, and go to state 82
    FALSE       shift, and go to state 83
    IDENTIFIER  shift, and go to state 21
    HEX_LIT     shift, and go to state 84
    INT_LIT     shift, and go to state 85
    CHAR_LIT    shift, and go to state 86
    '-'         shift, and go to state 87
    '('         shift, and go to state 88
    '!'         shift, and go to state 89

    method_call      go to state 90
    method_name      go to state 61
    location         go to state 91
    expr             go to state 99
    literal          go to state 93
    id               go to state 63
    int_literal      go to state 94
    decimal_literal  go to state 95
    hex_literal      go to state 96
    bool_literal     go to state 97
    char_literal     go to state 98


state 72

   26 statement: method_call ';' .

    $default  reduce using rule 26 (statement)


state 73

   38 method_call: method_name '(' . expr_x ')'

    $default  reduce using rule 44 (expr_x)

    expr_x  go to state 100


state 74

   35 assign_op: '=' .

    $default  reduce using rule 35 (assign_op)


state 75

   36 assign_op: "+=" .

    $default  reduce using rule 36 (assign_op)


state 76

   37 assign_op: "-=" .

    $default  reduce using rule 37 (assign_op)


state 77

   25 statement: location assign_op . expr ';'

    CALLOUT     shift, and go to state 52
    TRUE        shift, and go to state 82
    FALSE       shift, and go to state 83
    IDENTIFIER  shift, and go to state 21
    HEX_LIT     shift, and go to state 84
    INT_LIT     shift, and go to state 85
    CHAR_LIT    shift, and go to state 86
    '-'         shift, and go to state 87
    '('         shift, and go to state 88
    '!'         shift, and go to state 89

    method_call      go to state 90
    method_name      go to state 61
    location         go to state 91
    expr             go to state 101
    literal          go to state 93
    id               go to state 63
    int_literal      go to state 94
    decimal_literal  go to state 95
    hex_literal      go to state 96
    bool_literal     go to state 97
    char_literal     go to state 98


state 78

   42 location: id '[' . expr ']'

    CALLOUT     shift, and go to state 52
    TRUE        shift, and go to state 82
    FALSE       shift, and go to state 83
    IDENTIFIER  shift, and go to state 21
    HEX_LIT     shift, and go to state 84
    INT_LIT     shift, and go to state 85
    CHAR_LIT    shift, and go to state 86
    '-'         shift, and go to state 87
    '('         shift, and go to state 88
    '!'         shift, and go to state 89

    method_call      go to state 90
    method_name      go to state 61
    location         go to state 91
    expr             go to state 102
    literal          go to state 93
    id               go to state 63
    int_literal      go to state 94
    decimal_literal  go to state 95
    hex_literal      go to state 96
    bool_literal     go to state 97
    char_literal     go to state 98


state 79

   86 string_literal: STR_LIT .

    $default  reduce using rule 86 (string_literal)


state 80

   39 method_call: CALLOUT '(' string_literal . '[' ',' callout_arg_p ',' ']' ')'

    '['  shift, and go to state 103


state 81

   28 statement: FOR id '=' . expr ',' expr block

    CALLOUT     shift, and go to state 52
    TRUE        shift, and go to state 82
    FALSE       shift, and go to state 83
    IDENTIFIER  shift, and go to state 21
    HEX_LIT     shift, and go to state 84
    INT_LIT     shift, and go to state 85
    CHAR_LIT    shift, and go to state 86
    '-'         shift, and go to state 87
    '('         shift, and go to state 88
    '!'         shift, and go to state 89

    method_call      go to state 90
    method_name      go to state 61
    location         go to state 91
    expr             go to state 104
    literal          go to state 93
    id               go to state 63
    int_literal      go to state 94
    decimal_literal  go to state 95
    hex_literal      go to state 96
    bool_literal     go to state 97
    char_literal     go to state 98


state 82

   83 bool_literal: TRUE .

    $default  reduce using rule 83 (bool_literal)


state 83

   84 bool_literal: FALSE .

    $default  reduce using rule 84 (bool_literal)


state 84

   82 hex_literal: HEX_LIT .

    $default  reduce using rule 82 (hex_literal)


state 85

   81 decimal_literal: INT_LIT .

    $default  reduce using rule 81 (decimal_literal)


state 86

   85 char_literal: CHAR_LIT .

    $default  reduce using rule 85 (char_literal)


state 87

   49 expr: '-' . '(' expr ')'

    '('  shift, and go to state 105


state 88

   51 expr: '(' . expr ')'

    CALLOUT     shift, and go to state 52
    TRUE        shift, and go to state 82
    FALSE       shift, and go to state 83
    IDENTIFIER  shift, and go to state 21
    HEX_LIT     shift, and go to state 84
    INT_LIT     shift, and go to state 85
    CHAR_LIT    shift, and go to state 86
    '-'         shift, and go to state 87
    '('         shift, and go to state 88
    '!'         shift, and go to state 89

    method_call      go to state 90
    method_name      go to state 61
    location         go to state 91
    expr             go to state 106
    literal          go to state 93
    id               go to state 63
    int_literal      go to state 94
    decimal_literal  go to state 95
    hex_literal      go to state 96
    bool_literal     go to state 97
    char_literal     go to state 98


state 89

   50 expr: '!' . '(' expr ')'

    '('  shift, and go to state 107


state 90

   46 expr: method_call .

    $default  reduce using rule 46 (expr)


state 91

   45 expr: location .

    $default  reduce using rule 45 (expr)


state 92

   27 statement: IF '(' expr . ')' block else_block
   48 expr: expr . bin_op expr

    '+'   shift, and go to state 108
    '-'   shift, and go to state 109
    '*'   shift, and go to state 110
    '/'   shift, and go to state 111
    '%'   shift, and go to state 112
    '<'   shift, and go to state 113
    '>'   shift, and go to state 114
    "<="  shift, and go to state 115
    ">="  shift, and go to state 116
    "=="  shift, and go to state 117
    "!="  shift, and go to state 118
    "&&"  shift, and go to state 119
    "||"  shift, and go to state 120
    ')'   shift, and go to state 121

    bin_op    go to state 122
    arith_op  go to state 123
    rel_op    go to state 124
    eq_op     go to state 125
    cond_op   go to state 126


state 93

   47 expr: literal .

    $default  reduce using rule 47 (expr)


state 94

   73 literal: int_literal .

    $default  reduce using rule 73 (literal)


state 95

   79 int_literal: decimal_literal .

    $default  reduce using rule 79 (int_literal)


state 96

   80 int_literal: hex_literal .

    $default  reduce using rule 80 (int_literal)


state 97

   75 literal: bool_literal .

    $default  reduce using rule 75 (literal)


state 98

   74 literal: char_literal .

    $default  reduce using rule 74 (literal)


state 99

   29 statement: RETURN '[' expr . ']'
   48 expr: expr . bin_op expr

    '+'   shift, and go to state 108
    '-'   shift, and go to state 109
    '*'   shift, and go to state 110
    '/'   shift, and go to state 111
    '%'   shift, and go to state 112
    '<'   shift, and go to state 113
    '>'   shift, and go to state 114
    "<="  shift, and go to state 115
    ">="  shift, and go to state 116
    "=="  shift, and go to state 117
    "!="  shift, and go to state 118
    "&&"  shift, and go to state 119
    "||"  shift, and go to state 120
    ']'   shift, and go to state 127

    bin_op    go to state 122
    arith_op  go to state 123
    rel_op    go to state 124
    eq_op     go to state 125
    cond_op   go to state 126


state 100

   38 method_call: method_name '(' expr_x . ')'
   43 expr_x: expr_x . expr

    CALLOUT     shift, and go to state 52
    TRUE        shift, and go to state 82
    FALSE       shift, and go to state 83
    IDENTIFIER  shift, and go to state 21
    HEX_LIT     shift, and go to state 84
    INT_LIT     shift, and go to state 85
    CHAR_LIT    shift, and go to state 86
    '-'         shift, and go to state 87
    '('         shift, and go to state 88
    ')'         shift, and go to state 128
    '!'         shift, and go to state 89

    method_call      go to state 90
    method_name      go to state 61
    location         go to state 91
    expr             go to state 129
    literal          go to state 93
    id               go to state 63
    int_literal      go to state 94
    decimal_literal  go to state 95
    hex_literal      go to state 96
    bool_literal     go to state 97
    char_literal     go to state 98


state 101

   25 statement: location assign_op expr . ';'
   48 expr: expr . bin_op expr

    '+'   shift, and go to state 108
    '-'   shift, and go to state 109
    '*'   shift, and go to state 110
    '/'   shift, and go to state 111
    '%'   shift, and go to state 112
    '<'   shift, and go to state 113
    '>'   shift, and go to state 114
    "<="  shift, and go to state 115
    ">="  shift, and go to state 116
    "=="  shift, and go to state 117
    "!="  shift, and go to state 118
    "&&"  shift, and go to state 119
    "||"  shift, and go to state 120
    ';'   shift, and go to state 130

    bin_op    go to state 122
    arith_op  go to state 123
    rel_op    go to state 124
    eq_op     go to state 125
    cond_op   go to state 126


state 102

   42 location: id '[' expr . ']'
   48 expr: expr . bin_op expr

    '+'   shift, and go to state 108
    '-'   shift, and go to state 109
    '*'   shift, and go to state 110
    '/'   shift, and go to state 111
    '%'   shift, and go to state 112
    '<'   shift, and go to state 113
    '>'   shift, and go to state 114
    "<="  shift, and go to state 115
    ">="  shift, and go to state 116
    "=="  shift, and go to state 117
    "!="  shift, and go to state 118
    "&&"  shift, and go to state 119
    "||"  shift, and go to state 120
    ']'   shift, and go to state 131

    bin_op    go to state 122
    arith_op  go to state 123
    rel_op    go to state 124
    eq_op     go to state 125
    cond_op   go to state 126


state 103

   39 method_call: CALLOUT '(' string_literal '[' . ',' callout_arg_p ',' ']' ')'

    ','  shift, and go to state 132


state 104

   28 statement: FOR id '=' expr . ',' expr block
   48 expr: expr . bin_op expr

    '+'   shift, and go to state 108
    '-'   shift, and go to state 109
    '*'   shift, and go to state 110
    '/'   shift, and go to state 111
    '%'   shift, and go to state 112
    '<'   shift, and go to state 113
    '>'   shift, and go to state 114
    "<="  shift, and go to state 115
    ">="  shift, and go to state 116
    "=="  shift, and go to state 117
    "!="  shift, and go to state 118
    "&&"  shift, and go to state 119
    "||"  shift, and go to state 120
    ','   shift, and go to state 133

    bin_op    go to state 122
    arith_op  go to state 123
    rel_op    go to state 124
    eq_op     go to state 125
    cond_op   go to state 126


state 105

   49 expr: '-' '(' . expr ')'

    CALLOUT     shift, and go to state 52
    TRUE        shift, and go to state 82
    FALSE       shift, and go to state 83
    IDENTIFIER  shift, and go to state 21
    HEX_LIT     shift, and go to state 84
    INT_LIT     shift, and go to state 85
    CHAR_LIT    shift, and go to state 86
    '-'         shift, and go to state 87
    '('         shift, and go to state 88
    '!'         shift, and go to state 89

    method_call      go to state 90
    method_name      go to state 61
    location         go to state 91
    expr             go to state 134
    literal          go to state 93
    id               go to state 63
    int_literal      go to state 94
    decimal_literal  go to state 95
    hex_literal      go to state 96
    bool_literal     go to state 97
    char_literal     go to state 98


state 106

   48 expr: expr . bin_op expr
   51     | '(' expr . ')'

    '+'   shift, and go to state 108
    '-'   shift, and go to state 109
    '*'   shift, and go to state 110
    '/'   shift, and go to state 111
    '%'   shift, and go to state 112
    '<'   shift, and go to state 113
    '>'   shift, and go to state 114
    "<="  shift, and go to state 115
    ">="  shift, and go to state 116
    "=="  shift, and go to state 117
    "!="  shift, and go to state 118
    "&&"  shift, and go to state 119
    "||"  shift, and go to state 120
    ')'   shift, and go to state 135

    bin_op    go to state 122
    arith_op  go to state 123
    rel_op    go to state 124
    eq_op     go to state 125
    cond_op   go to state 126


state 107

   50 expr: '!' '(' . expr ')'

    CALLOUT     shift, and go to state 52
    TRUE        shift, and go to state 82
    FALSE       shift, and go to state 83
    IDENTIFIER  shift, and go to state 21
    HEX_LIT     shift, and go to state 84
    INT_LIT     shift, and go to state 85
    CHAR_LIT    shift, and go to state 86
    '-'         shift, and go to state 87
    '('         shift, and go to state 88
    '!'         shift, and go to state 89

    method_call      go to state 90
    method_name      go to state 61
    location         go to state 91
    expr             go to state 136
    literal          go to state 93
    id               go to state 63
    int_literal      go to state 94
    decimal_literal  go to state 95
    hex_literal      go to state 96
    bool_literal     go to state 97
    char_literal     go to state 98


state 108

   60 arith_op: '+' .

    $default  reduce using rule 60 (arith_op)


state 109

   61 arith_op: '-' .

    $default  reduce using rule 61 (arith_op)


state 110

   62 arith_op: '*' .

    $default  reduce using rule 62 (arith_op)


state 111

   63 arith_op: '/' .

    $default  reduce using rule 63 (arith_op)


state 112

   64 arith_op: '%' .

    $default  reduce using rule 64 (arith_op)


state 113

   65 rel_op: '<' .

    $default  reduce using rule 65 (rel_op)


state 114

   66 rel_op: '>' .

    $default  reduce using rule 66 (rel_op)


state 115

   67 rel_op: "<=" .

    $default  reduce using rule 67 (rel_op)


state 116

   68 rel_op: ">=" .

    $default  reduce using rule 68 (rel_op)


state 117

   69 eq_op: "==" .

    $default  reduce using rule 69 (eq_op)


state 118

   70 eq_op: "!=" .

    $default  reduce using rule 70 (eq_op)


state 119

   71 cond_op: "&&" .

    $default  reduce using rule 71 (cond_op)


state 120

   72 cond_op: "||" .

    $default  reduce using rule 72 (cond_op)


state 121

   27 statement: IF '(' expr ')' . block else_block

    '{'  shift, and go to state 43

    block  go to state 137


state 122

   48 expr: expr bin_op . expr
